@@ -187,3 +187,12 @@ HORAS TRABALHADAS: 6h
 - bugfixes no dashboard
 
 HORAS TRABALHADAS: 6h
+
+==========
+30/05/2009
+==========
+
+- bugfixes no dashboard
+- inclusao de botao para adicionar artigo ao queue
+
+HORAS TRABALHADAS: 5h
